--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^6.1.0",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
