--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "redis": "^4.6.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
