--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^10",
     "axios": "^1.5.1",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "jsdom": "^22.1.0",
